--- a/Lab5/db/lab5.lpc.html
+++ b/Lab5/db/lab5.lpc.html
@@ -16,12 +16,12 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >mem|parser</TD>
+<TD >ram0|altsyncram_component|auto_generated</TD>
+<TD >29</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,15 +32,31 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >mem</TD>
-<TD >30</TD>
+<TD >ram0</TD>
+<TD >29</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >16</TD>
-<TD >30</TD>
-<TD >16</TD>
-<TD >16</TD>
-<TD >16</TD>
-<TD >16</TD>
-<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >instaRam</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -194,13 +210,13 @@
 <TR >
 <TD >slc|d0</TD>
 <TD >45</TD>
-<TD >12</TD>
+<TD >2</TD>
 <TD >14</TD>
-<TD >12</TD>
+<TD >2</TD>
 <TD >48</TD>
-<TD >12</TD>
-<TD >12</TD>
-<TD >12</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -208,15 +224,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex_drivers[3]</TD>
-<TD >4</TD>
+<TD >slc|hex3</TD>
 <TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >7</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -224,15 +240,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex_drivers[2]</TD>
-<TD >4</TD>
+<TD >slc|hex2</TD>
 <TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >7</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -240,15 +256,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex_drivers[1]</TD>
-<TD >4</TD>
+<TD >slc|hex1</TD>
 <TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >7</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -256,15 +272,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex_drivers[0]</TD>
-<TD >4</TD>
+<TD >slc|hex0</TD>
 <TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >7</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
