--- a/Lab5/db/lab5.lpc.html
+++ b/Lab5/db/lab5.lpc.html
@@ -16,28 +16,12 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >ram0|altsyncram_component|auto_generated</TD>
-<TD >29</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
+<TD >mem|parser</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >ram0</TD>
-<TD >29</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -48,15 +32,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >instaRam</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >33</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >mem</TD>
+<TD >30</TD>
+<TD >16</TD>
+<TD >30</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -66,13 +50,13 @@
 <TR >
 <TD >slc|state_controller</TD>
 <TD >11</TD>
-<TD >14</TD>
-<TD >1</TD>
-<TD >14</TD>
-<TD >24</TD>
-<TD >14</TD>
-<TD >14</TD>
-<TD >14</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >27</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -89,6 +73,118 @@
 <TD >16</TD>
 <TD >16</TD>
 <TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >slc|d0|ADDR2_Mult</TD>
+<TD >66</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >slc|d0|ADDR1_Mult</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >slc|d0|SR2_Mult</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >slc|d0|DR_Mult</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >slc|d0|SR1_Mult</TD>
+<TD >7</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >slc|d0|Register_File</TD>
+<TD >28</TD>
+<TD >16</TD>
+<TD >8</TD>
+<TD >16</TD>
+<TD >32</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >slc|d0|Arithmetic</TD>
+<TD >34</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,6 +256,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >slc|d0|ben</TD>
+<TD >23</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >slc|d0|IR_Reg</TD>
 <TD >19</TD>
 <TD >0</TD>
@@ -209,14 +321,14 @@
 </TR>
 <TR >
 <TD >slc|d0</TD>
-<TD >45</TD>
+<TD >44</TD>
+<TD >17</TD>
 <TD >2</TD>
-<TD >14</TD>
-<TD >2</TD>
-<TD >48</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >17</TD>
+<TD >75</TD>
+<TD >17</TD>
+<TD >17</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -290,13 +402,13 @@
 <TR >
 <TD >slc</TD>
 <TD >30</TD>
-<TD >16</TD>
+<TD >6</TD>
 <TD >0</TD>
-<TD >16</TD>
+<TD >6</TD>
 <TD >72</TD>
-<TD >16</TD>
-<TD >16</TD>
-<TD >16</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
