--- a/Lab5/db/lab5.lpc.html
+++ b/Lab5/db/lab5.lpc.html
@@ -50,13 +50,13 @@
 <TR >
 <TD >slc|state_controller</TD>
 <TD >11</TD>
-<TD >6</TD>
+<TD >5</TD>
 <TD >1</TD>
-<TD >6</TD>
+<TD >5</TD>
 <TD >27</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >6</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >5</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -66,13 +66,13 @@
 <TR >
 <TD >slc|memory_subsystem</TD>
 <TD >62</TD>
-<TD >16</TD>
 <TD >0</TD>
-<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >48</TD>
-<TD >16</TD>
-<TD >16</TD>
-<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -322,13 +322,13 @@
 <TR >
 <TD >slc|d0</TD>
 <TD >44</TD>
-<TD >17</TD>
+<TD >27</TD>
 <TD >2</TD>
-<TD >17</TD>
+<TD >27</TD>
 <TD >75</TD>
-<TD >17</TD>
-<TD >17</TD>
-<TD >17</TD>
+<TD >27</TD>
+<TD >27</TD>
+<TD >27</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -336,7 +336,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex3</TD>
+<TD >slc|hex_drivers[3]</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -352,7 +352,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex2</TD>
+<TD >slc|hex_drivers[2]</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -368,7 +368,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex1</TD>
+<TD >slc|hex_drivers[1]</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -384,7 +384,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >slc|hex0</TD>
+<TD >slc|hex_drivers[0]</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
